# value_screener

./: .gitignore  ARCHITECTURE_ROADMAP.md  ARCHITECTURE_SUMMARY.md  BMAD_IMPLEMENTATION_SUMMARY.md  CODE_GUIDE.md  Dockerfile  Dockerfile_undervaluation  README.md  kospi_screener.py  pyproject.toml  pyproject_undervaluation.toml  requirements.txt  strategy.md  universal_screener.py
configs/: default.yaml
sample/: config.yaml  financials_schema.csv  tickers.txt
src/undervaluation/: __init__.py  cli.py
src/undervaluation/data/: __init__.py  csv_connector.py  interfaces.py  yfinance_connector.py
src/undervaluation/factors/: __init__.py  accounting_factors.py  factor_calculator.py  investment_factors.py  momentum_factors.py  quality_factors.py  risk_factors.py  value_factors.py
src/undervaluation/schemas/: __init__.py  data_models.py  unified_schema.py
src/value_screener/: cli.py  config.py  container.py  fetchers.py  interfaces.py  io.py  metrics.py  screening.py
src/value_screener/business/: __init__.py
src/value_screener/business/screening/: __init__.py  strategy_factory.py
src/value_screener/business/screening/strategies/: __init__.py  buffett_strategy.py  growth_strategy.py  quality_strategy.py  value_strategy.py
